--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
 a {
     text-decoration: none;
 }
-ul {
+ul, ol {
     list-style-type: none;
 }
 
@@ -66,6 +66,7 @@ ul {
 .hero-button {
     background-color: #4D5AE5;
     color: var(--primary-white-color);
+    cursor: pointer;
 }
 .hero-button:hover, :focus {
     background-color: #404BBF;
@@ -130,6 +131,7 @@ ul {
     color: #4D5AE5;
     background-color: #F4F4FD;
     border-color: #E7E9FC;
+    cursor: pointer;
 }
 .button-filter:hover, :focus, :active  {
     color: var(--primary-white-color);
