--- a/css/styles.css
+++ b/css/styles.css
@@ -171,7 +171,7 @@ text-transform: capitalize;
     text-align: center;
     letter-spacing: 0.02em;
 }
-.positionn-team {
+.position-team {
      font-size: 16px;
 line-height: 1.5;
 text-align: center;
