--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ ul, ol {
 }
 .header-logo {
     color: var(--secondary-black-color);
-    font-family: var(--secondary-font);
+    font-family: 'Raleway', sans-serif;
 font-weight: 800;
 font-size: 18px;
 line-height: 1.17;
