--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ ul, ol {
     
 }
 .header-logo {
-    color: var(--secondary-black-color);
+    color: #2E2F42;
     font-family: 'Raleway', sans-serif;
 font-weight: 800;
 font-size: 18px;
