--- a/css/styles.css
+++ b/css/styles.css
@@ -162,6 +162,7 @@ text-transform: capitalize;
     text-transform: capitalize;
 }
 .list-team {
+    background-color: var(--primary-white-color) ;
 }
 .item-team {
 }
