--- a/css/styles.css
+++ b/css/styles.css
@@ -165,7 +165,7 @@ text-transform: capitalize;
 
    }
 .item-team {
-    background-color: var(--primary-white-color);
+    background-color: #FFFFFF;
 }
 .img-team {
 }
