--- a/css/styles.css
+++ b/css/styles.css
@@ -241,7 +241,7 @@ letter-spacing: 0.02em;
     font-family: var(--secondary-font);
 font-weight: 800;
 font-size: 18px;
-line-height: 1.17x;
+line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 }
