--- a/css/styles.css
+++ b/css/styles.css
@@ -64,12 +64,12 @@ letter-spacing: 0.02em;
 .header-link-active {
     color: var(--secondary-black-color);
 }
-.header-link-active:hover,:focus {
+.header-link-active:hover {
     color: #404bbf;
 }
-/* .header-link-active:focus {
+.header-link-active:focus {
     color: #404bbf;
-} */
+}
 
 .address {   
 font-style: normal;
