--- a/css/styles.css
+++ b/css/styles.css
@@ -229,6 +229,7 @@ letter-spacing: 0.02em;
    
 }
 .text-img {
+    color: var(--primary-text-color);
        font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
