--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.04em;
 }
-.hero-button:hover, :focus {
+.hero-button:hover, .hero-button:focus {
     background-color: var(--hover-color);
     color: var(--primary-white-color);
 }
@@ -210,7 +210,7 @@ letter-spacing: 0.02em;
     text-align: center;
     letter-spacing: 0.04em;
 }
-.button-filter:hover, :focus, :active  {
+.button-filter:hover, .button-filter:focus, .button-filter:active  {
     color: var(--primary-white-color);
     background-color: var(--hover-color);
     }
